# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\CategoryController;
+use App\Http\Controllers\Api\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -24,3 +25,5 @@ Route::get('/categories/{id}', [CategoryController::class, 'getId']);
 Route::post('/categories', [CategoryController::class, 'create']);
 Route::delete('/categories/{id}', [CategoryController::class, 'delete']);
 Route::post('/categories/edit/{id}', [CategoryController::class, 'edit']);
+
+Route::post('/login',[AuthController::class, 'login']);
